get order receipts y api de dashboard
