# swagger_server/swagger/swagger.yaml
@@ -2668,6 +2668,69 @@ paths:
                 $ref: "#/components/schemas/ResponseError"
       x-openapi-router-controller: swagger_server.controllers.logbook_controller.LogbookView
   /purchase-order-receipts:
+    get:
+      tags:
+      - Purchase order
+      summary: Obtiene todas las recepciones de compra
+      description: Devuelve todas las recepciones de compra de la base
+      operationId: get_order_receipts
+      parameters:
+        - name: user
+          in: query
+          required: false
+          schema:
+            type: string
+            example: "dmales"
+        - name: puchase_order_id
+          in: query
+          required: false
+          schema:
+            type: string
+            example: "1, 2, 3"
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "ZENTINEL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.logbook_controller.LogbookView
     post:
       tags:
       - Purchase order
